--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-7">
-            <h1>Chin Blog <i class="fa fa-heart" aria-hidden="true"></i></h1><a href="#" class="hero-link">Discover More</a>
+            <h1>Chin Blog <i class="fa fa-heart" aria-hidden="true"></i></h1><a href="/blog" class="hero-link">Discover More</a>
           </div>
         </div><a href=".intro" class="continue link-scroll"><i class="fa fa-long-arrow-down"></i> Scroll Down</a>
       </div>
@@ -85,7 +85,7 @@
             <div class="post-thumbnail"><a href="#"><img src="{{ obj.thumbnail.url }}" alt="..." class="img-fluid"></a></div>
             <div class="post-details">
               <div class="post-meta d-flex justify-content-between">
-                <div class="date">{{ obj.timestamp }}</div>
+                <div class="date">{{ obj.timestamp |  date:'Y-m-d' }}</div>
                 <div class="category">
                   {% for cat in obj.categories.all %}
                   <a href="#">{{ cat }}</a>
@@ -105,8 +105,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h2>Subscribe to Newsletter</h2>
-            <p class="text-big">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h2>输入邮箱，订阅最新消息</h2>
+            <p class="text-big">在这里输入下您的邮箱，就可以获得最新的消息哦</p>
           </div>
           <div class="col-md-8">
             <div class="form-holder">
