--- a/templates/parts/header.html
+++ b/templates/parts/header.html
@@ -19,18 +19,26 @@
         <div class="container">
           <!-- Navbar Brand -->
           <div class="navbar-header d-flex align-items-center justify-content-between">
-            <!-- Navbar Brand --><a href="/" class="navbar-brand">Bootstrap Blog</a>
+            <!-- Navbar Brand --><a href="/" class="navbar-brand">Chihokyo Blog&nbsp<i class="fa fa-heart" aria-hidden="true" style="color:#e27575"></i></a>
             <!-- Toggle Button-->
             <button type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-controls="navbarcollapse" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span></span><span></span><span></span></button>
           </div>
           <!-- Navbar Menu -->
           <div id="navbarcollapse" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item"><a href="/" class="nav-link ">Home</a>
+              <li class="nav-item"><a href="/" class="nav-link"><i class="fa fa-home"></i>&nbspHome</a>
               </li>
-              <li class="nav-item"><a href="/blog" class="nav-link active ">Blog</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="/blog/" id="navbardrop" data-toggle="dropdown">
+                  <i class="fa fa-hand-o-right" aria-hidden="true"></i>&nbsp&nbspBlog
+                </a>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="/blog/"><i class="fa fa-code" aria-hidden="true"></i>&nbsp&nbspCode</a>
+                  <a class="dropdown-item" href="#"><i class="fa fa-gamepad" aria-hidden="true"></i>&nbsp&nbsp游戏</a>
+                  <a class="dropdown-item" href="#"><i class="fa fa-train" aria-hidden="true"></i>&nbsp&nbsp&nbsp在日生活</a>
+                </div>
               </li>
-              <li class="nav-item"><a href="#" class="nav-link ">Contact</a>
+              <li class="nav-item"><a href="#" class="nav-link "><i class="fa fa-user-circle-o" aria-hidden="true"></i>&nbsp关于我</a>
               </li>
               {% if request.user.is_staff %}
               <li class="nav-item"><a href="{% url 'post-create' %}" class="nav-link ">Create</a>
