finished color and font-family

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
-            <h2 class="h3">欢迎光临</h2>
-            <p class="text-big">Place a nice <strong>introduction</strong> here <strong>to catch reader's attention</strong>. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderi.</p>
+            <h2 class="h3">What's New</h2>
+            <p class="text-big">这里设置最新的最新的最新的最新的消息最新最新的消息1<br/>
+            这里设置最新的最新的最新的最新的消息最新最新的消息1<br/></p>
           </div>
         </div>
       </div>
