--- a/templates/blog.html
+++ b/templates/blog.html
@@ -27,6 +27,7 @@
                       <div class="avatar"><img src="{{ post.author.profile_picture.url }}" alt="..." class="img-fluid"></div>
                       <div class="title"><span>{{ post.author.user.username }}</span></div></a>
                     <div class="date"><i class="icon-clock"></i>{{ post.timestamp|timesince }} ago</div>
+                    <div class="views"><i class="icon-eye"></i> 500</div>
                     <div class="comments meta-last"><i class="icon-comment"></i>{{ post.comment_count}}</div>
                   </footer>
                 </div>
