--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -5,12 +5,12 @@
         <div class="row">
           <div class="col-md-4">
             <div class="logo">
-              <h6 class="text-white">Bootstrap Blog</h6>
+              <h6 class="text-white">Chihokyo Blog</h6>
             </div>
             <div class="contact-details">
-              <p>53 Broadway, Broklyn, NY 11249</p>
-              <p>Phone: (020) 123 456 789</p>
-              <p>Email: <a href="mailto:info@company.com">Info@Company.com</a></p>
+              <p><i class="fa fa-map-marker" aria-hidden="true"></i>&nbspJapan Tokyo(日本在住)</p>
+              <p><i class="fa fa-user-o" aria-hidden="true"></i>&nbsp中国 江苏</p>
+              <p><i class="fa fa-envelope-o" aria-hidden="true"></i>&nbspEmail: <a href="mailto:chihokyo@yahoo.co.jp">chihokyo@yahoo.co.jp</a></p>
               <ul class="social-menu">
                 <li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
                 <li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -57,11 +57,10 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <p>&copy; 2017. All rights reserved. Your great site.</p>
+              <p>&copy; 2019. All rights reserved.Coding by Chihokyo <i class="fa fa-heart" aria-hidden="true" style="color:#e27575"></i></p>
             </div>
             <div class="col-md-6 text-right">
-              <p>Template By <a href="https://bootstrapious.com/p/bootstrap-carousel" class="text-white">Bootstrapious</a>
-                <!-- Please do not remove the backlink to Bootstrap Temple unless you purchase an attribution-free license @ Bootstrap Temple or support us at http://bootstrapious.com/donate. It is part of the license conditions. Thanks for understanding :)                         -->
+              <p>Powered By <a href="https://bootstrapious.com/p/bootstrap-carousel" class="text-white">Django&nbsp</a>&&nbspTemplate By<a href="https://bootstrapious.com/p/bootstrap-carousel" class="text-white">&nbspBootstrap</a>
               </p>
             </div>
           </div>
